Updated portfolio layout and CSS for 5 projects

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         Currently pursuing <b>B.Tech CSE at VIT-AP (Expected 2026)</b>.
       </p>
       <div class="btn-con">
-        <a href="https://drive.google.com/file/d/1V1cvB0SNlTmSo4DJrPDeyiptrdRntCOc/view?usp=drivesdk" class="main-btn" download>
+        <a href="https://drive.google.com/file/d/1ZBFxuQdCMHecKKA8zyoIkMWq56OCJ7lP/view?usp=sharing" class="main-btn" download>
           <span class="btn-text">Download Resume</span>
           <span class="btn-icon"><i class="fas fa-download"></i></span>
         </a>
@@ -74,7 +74,7 @@
           I enjoy working on projects that combine creativity, logic, and real-world impact.
         </p>
         <div class="btn-con">
-          <a href="https://drive.google.com/file/d/1V1cvB0SNlTmSo4DJrPDeyiptrdRntCOc/view?usp=drivesdk" class="main-btn" download>
+          <a href="https://drive.google.com/file/d/1ZBFxuQdCMHecKKA8zyoIkMWq56OCJ7lP/view?usp=sharing" class="main-btn" download>
             <span class="btn-text">Download Resume</span>
             <span class="btn-icon"><i class="fas fa-download"></i></span>
           </a>
@@ -94,15 +94,15 @@
           </div>
         </div>
         <div class="about-item">
-          <div class="abt-text">
-            <p class="large-text">Projects</p>
-            <p class="small-text">
-              Rainwater Harvesting, Gmail Tracker, Speech Emotion Recognition
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
+  <div class="abt-text">
+    <p class="large-text">Projects</p>
+    <p class="small-text">
+      <b>RAG Knowledge-Based Search Engine:</b>Full-stack Q&A system for document search.<br>
+      <b>Speech Emotion Recognition:</b> Classifies emotions from speech using deep learning.
+    </p>
+  </div>
+</div>
+
 
     <div class="about-stats">
       <h4 class="stat-title">My Skills</h4>
@@ -139,42 +139,80 @@
     </div>
   </section>
 
-  <!-- Portfolio -->
-  <section class="container" id="portfolio">
-    <div class="main-title">
-      <h2>My <span>Portfolio</span><span class="bg-text">Projects</span></h2>
-    </div>
-    <p class="port-text">Some of my projects across web dev, AI, and problem solving.</p>
-    <div class="portfolios">
-      <div class="portfolio-item">
-        <div class="image"><img src="img/rainwater.jpg" alt="Rainwater Harvesting" /></div>
-        <div class="hover-items">
-          <h3>Rainwater Harvesting System</h3>
-          <div class="icons">
-            <a href="https://github.com/yourgithub/rainwater" class="icon"><i class="fab fa-github"></i></a>
-          </div>
-        </div>
+<!-- Portfolio -->
+<section class="container" id="portfolio">
+  <div class="main-title">
+    <h2>My <span>Portfolio</span><span class="bg-text">Projects</span></h2>
+  </div>
+  <p class="port-text">Some of my projects across web dev, AI, and problem solving.</p>
+
+  <div class="portfolios">
+    <!-- Project 1 -->
+    <div class="portfolio-item">
+      <div class="image">
+        <img src="img/LSTM.png" alt="Speech Emotion Recognition LSTM" />
       </div>
-      <div class="portfolio-item">
-        <div class="image"><img src="img/ser.jpg" alt="Speech Emotion Recognition" /></div>
-        <div class="hover-items">
-          <h3>Speech Emotion Recognition</h3>
-          <div class="icons">
-            <a href="https://github.com/yourgithub/ser" class="icon"><i class="fab fa-github"></i></a>
-          </div>
-        </div>
-      </div>
-      <div class="portfolio-item">
-        <div class="image"><img src="img/gmail-tracker.jpg" alt="Gmail Tracker" /></div>
-        <div class="hover-items">
-          <h3>Gmail Order Tracker</h3>
-          <div class="icons">
-            <a href="https://github.com/yourgithub/gmail-order-tracker" class="icon"><i class="fab fa-github"></i></a>
-          </div>
+      <div class="hover-items">
+        <h3>Speech Emotion Detection LSTM</h3>
+        <div class="icons">
+          <a href="https://github.com/anshika13raj/SpeechEmotionDetectionLSTM" class="icon"><i class="fab fa-github"></i></a>
         </div>
       </div>
     </div>
-  </section>
+
+    <!-- Project 2 -->
+    <div class="portfolio-item">
+      <div class="image">
+        <img src="img/GRU.png" alt="Speech Emotion Recognition GRU" />
+      </div>
+      <div class="hover-items">
+        <h3>Speech Emotion Detection GRU</h3>
+        <div class="icons">
+          <a href="https://github.com/anshika13raj/SpeechEmotionDetectionGRU" class="icon"><i class="fab fa-github"></i></a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Project 3 -->
+    <div class="portfolio-item">
+      <div class="image">
+        <img src="img/Ragchat.png" alt="RAG Chat Engine" />
+      </div>
+      <div class="hover-items">
+        <h3>RagChat: Knowledge-Based Search Engine</h3>
+        <div class="icons">
+          <a href="https://github.com/anshika13raj/KnowledgeBasedSearchEngine" class="icon"><i class="fab fa-github"></i></a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Project 4 -->
+    <div class="portfolio-item">
+      <div class="image">
+        <img src="img/health.png" alt="HealthCare Dashboard" />
+      </div>
+      <div class="hover-items">
+        <h3>HealthCare Dashboard (Power BI)</h3>
+        <div class="icons">
+          <a href="https://github.com/anshika13raj/HealthCare-Dashboard" class="icon"><i class="fab fa-github"></i></a>
+        </div>
+      </div>
+    </div>
+
+    <!-- ✅ Project 5 (Wink and Shush Detection) -->
+    <div class="portfolio-item">
+      <div class="image">
+        <img src="img/Wink and shush.png" alt="Wink-and-Shush-Detection" />
+      </div>
+      <div class="hover-items">
+        <h3>Wink and Shush Detection using OpenCV</h3>
+        <div class="icons">
+          <a href="https://github.com/anshika13raj/Wink-and-Shush-Detection" class="icon"><i class="fab fa-github"></i></a>
+        </div>
+      </div>
+    </div>
+  </div> 
+</section>
 
   <!-- Certifications -->
   <section class="container" id="certifications">
